--- a/BooksAssignment/appsettings.json
+++ b/BooksAssignment/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=books.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
