--- a/BooksAssignment/BooksAssignment.csproj
+++ b/BooksAssignment/BooksAssignment.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\RequestModels\**" />
+    <Content Remove="Controllers\RequestModels\**" />
+    <EmbeddedResource Remove="Controllers\RequestModels\**" />
+    <None Remove="Controllers\RequestModels\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
